--- a/package.json
+++ b/package.json
@@ -3,10 +3,19 @@
   "version": "1.0.0",
   "description": "Basic setup for ReactJS Blueprints - chapter 1",
   "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/svenanders/ReactJSBlueprints_Chapter1"
+  },
+  "author": {
+    "name": "Sven Anders Robbestad",
+    "email": "sven@robbestad.com",
+    "url": "https://www.robbestad.com"
+  },
   "directories": {
     "source": "source"
   },
-  "devDependencies": {
+  "dependencies": {
     "babel-preset-es2015": "6.3.13",
     "babel-preset-react": "6.3.13",
     "babelify": "7.3.0",
@@ -18,9 +27,7 @@
     "reactify": "1.1.1",
     "serve-favicon": "2.3.0",
     "uglifyjs": "2.4.10",
-    "watchify": "3.6.1"
-  },
-  "dependencies": {
+    "watchify": "3.6.1",
     "basic-auth": "1.0.4",
     "compression": "1.6.0",
     "express": "4.13.3"
@@ -36,6 +43,5 @@
       "reactify"
     ]
   },
-  "author": "Sven Anders Robbestad <sven@robbestad.com>",
   "license": "ISC"
 }
